WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121922
[css-shapes] Shapes are not resolved the same way in shape-inside and clip-path
https://bugs.webkit.org/show_bug.cgi?id=121922
Summary
[css-shapes] Shapes are not resolved the same way in shape-inside and clip-path
François REMY
Reported
2013-09-25 13:22:29 PDT
For a repro, please refer to: -
http://codepen.io/anon/pen/ahmyk
The right behavior per-spec is the clip-path one (ie: use the demi-diagonal of the content box as 100% reference). CSS Shapes needs to be modified to comply. For more context, please have a look at the following discussion on www-style: -
http://lists.w3.org/Archives/Public/www-style/2013Sep/0114.html
Attachments
Patch
(8.55 KB, patch)
2013-09-26 13:57 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(732.10 KB, application/zip)
2013-09-26 14:43 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion
(747.91 KB, application/zip)
2013-09-26 15:07 PDT
,
Build Bot
no flags
Details
Patch
(12.19 KB, patch)
2013-09-26 15:16 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2013-09-26 13:57:33 PDT
Created
attachment 212742
[details]
Patch
Bem Jones-Bey
Comment 2
2013-09-26 14:18:56 PDT
Comment on
attachment 212742
[details]
Patch I'm going to have to update this.
Build Bot
Comment 3
2013-09-26 14:43:19 PDT
Comment on
attachment 212742
[details]
Patch
Attachment 212742
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/2611006
New failing tests: fast/shapes/shape-inside/shape-inside-on-nested-container-with-unresolved-height.html
Build Bot
Comment 4
2013-09-26 14:43:20 PDT
Created
attachment 212750
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 5
2013-09-26 15:07:37 PDT
Comment on
attachment 212742
[details]
Patch
Attachment 212742
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/2620008
New failing tests: fast/shapes/shape-inside/shape-inside-on-nested-container-with-unresolved-height.html
Build Bot
Comment 6
2013-09-26 15:07:40 PDT
Created
attachment 212757
[details]
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Bem Jones-Bey
Comment 7
2013-09-26 15:16:53 PDT
Created
attachment 212759
[details]
Patch
Andreas Kling
Comment 8
2013-09-27 08:29:30 PDT
Comment on
attachment 212759
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=212759&action=review
r=me
> LayoutTests/ChangeLog:11 > + Update the nested container with unresolved height test because with a > + circle it isn't really testing just for unresolved height behavior.
Good idea!
WebKit Commit Bot
Comment 9
2013-09-27 08:54:25 PDT
Comment on
attachment 212759
[details]
Patch Clearing flags on attachment: 212759 Committed
r156545
: <
http://trac.webkit.org/changeset/156545
>
WebKit Commit Bot
Comment 10
2013-09-27 08:54:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug