[css-shapes] Shapes are not resolved the same way in shape-inside and clip-path https://bugs.webkit.org/show_bug.cgi?id=121922

Reviewed by Andreas Kling.

Source/WebCore:

Fix computation of a percentage radius for circle shape-outside to
match the CSS Shapes spec.

Test: csswg/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-circle-001.html

* rendering/shapes/Shape.cpp:
(WebCore::Shape::createShape):

LayoutTests:

Add new test for circular shape-outside with percentage radius.

Update the nested container with unresolved height test because with a
circle it isn't really testing just for unresolved height behavior.

* csswg/contributors/adobe/submitted/shapes/shape-outside/resources/w3c-import.log:
* csswg/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-circle-001-expected.html: Added.
* csswg/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-circle-001.html: Added.
* csswg/contributors/adobe/submitted/shapes/shape-outside/w3c-import.log:
* fast/shapes/shape-inside/shape-inside-on-nested-container-with-unresolved-height-expected.html:
* fast/shapes/shape-inside/shape-inside-on-nested-container-with-unresolved-height.html:


Canonical link: https://commits.webkit.org/140044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156545 268f45cc-cd09-0410-ab3c-d52691b4dbfc